# panchayat

./: .env.example  .gitignore  LICENSE  README.md  docker-compose-gateway-only.yml  docker-compose.dev.yml  docker-compose.swarm-dev.yml  docker-compose.swarm.yml  docker-compose.yml  pom.xml  run_local.sh
.github/workflows/: ci.yml
client/: Dockerfile  Dockerfile-debug  index.html  package-lock.json  package.json  vite.config.ts
client/e2e/: app.spec.ts
client/src/: App.css  App.test.tsx  App.tsx  index.css
crowdfund-service/: Dockerfile-debug  pom.xml
crowdfund-service/src/main/java/com/chintan/crowdfund/: CrowdfundServiceApplication.java
crowdfund-service/src/main/resources/: application.properties  application.yml
expert-review-service/: Dockerfile-debug  pom.xml  pyproject.toml
expert-review-service/src/: main.py
expert-review-service/src/api/v1/: reviews.py
expert-review-service/src/core/: config.py
expert-review-service/src/db/: models.py  session.py
expert-review-service/src/main/java/com/chintan/expertreview/: ExpertReviewServiceApplication.java
expert-review-service/src/main/java/com/chintan/expertreview/controller/: BlacklistController.java
expert-review-service/src/main/java/com/chintan/expertreview/dto/: BlacklistRequest.java  VoteRequest.java
expert-review-service/src/main/java/com/chintan/expertreview/model/: BlacklistProposal.java  BlacklistStatus.java  ExpertVote.java
expert-review-service/src/main/java/com/chintan/expertreview/repository/: BlacklistProposalRepository.java  ExpertVoteRepository.java
expert-review-service/src/main/java/com/chintan/expertreview/service/: BlacklistService.java
expert-review-service/src/main/resources/: application.properties  application.yml
expert-review-service/src/services/: event_handler.py  kafka_service.py  review_service.py
expert-review-service/src/test/java/com/chintan/expertreview/expert_review_service/: ExpertReviewServiceApplicationTests.java
gateway/: .gitignore  Dockerfile  Dockerfile-debug  curl.sh  pom.xml
gateway/src/main/java/com/chintan/gateway/: GatewayApplication.java
gateway/src/main/resources/: application-local.yaml  application.yaml  schema.sql
gateway/src/test/java/com/chintan/gateway/: GatewayApplicationTests.java
gov-submit-service/: pom.xml  pyproject.toml
gov-submit-service/src/: main.py
gov-submit-service/src/core/: config.py
gov-submit-service/src/main/java/com/chintan/govsubmit/: GovSubmitServiceApplication.java
gov-submit-service/src/main/java/com/chintan/govsubmit/service/: GovSubmitConsumer.java
gov-submit-service/src/main/resources/: application.properties  application.yml
gov-submit-service/src/services/: kafka_service.py  submit_handler.py
gov-submit-service/src/test/java/com/chintan/govsubmit/gov_submit_service/: GovSubmitServiceApplicationTests.java
moderation-service/: pyproject.toml
moderation-service/src/: main.py
moderation-service/src/api/v1/: moderation.py
moderation-service/src/core/: config.py  tracing.py
moderation-service/src/schemas/: moderation.py
moderation-service/src/services/: kafka_service.py  moderation_service.py
monitoring/prometheus/: prometheus-dev.yml  prometheus.yml
notification-service/: pom.xml  pyproject.toml
notification-service/src/: main.py
notification-service/src/core/: config.py
notification-service/src/main/java/com/chintan/notification/: NotificationServiceApplication.java
notification-service/src/main/java/com/chintan/notification/service/: NotificationConsumer.java
notification-service/src/main/resources/: application.yml
notification-service/src/services/: kafka_service.py  notification_handler.py
notification-service/src/test/java/com/chintan/notification/notification_service/: NotificationServiceApplicationTests.java
postgres-init/: init.sql
src/main/java/com/chintan/gateway/: GatewayApplication.java
src/main/java/com/chintan/gateway/config/: DatabaseConfig.java  SecurityConfig.java
src/main/java/com/chintan/gateway/model/: User.java
src/main/resources/: application.yaml  schema.sql
threads/: .gitignore  Dockerfile  Dockerfile-debug  main.py  pyproject.toml
threads/src/: main.py
threads/src/api/v1/: comments.py  feed.py  ideas.py
threads/src/core/: config.py
threads/src/db/: models.py  session.py
threads/src/schemas/: comment.py  idea.py
threads/src/services/: cache_service.py  comment_service.py  idea_service.py  kafka_service.py  moderation_client.py  search_service.py
threads/tests/: conftest.py  test_api.py
user-service/: .gitignore  Dockerfile-debug  pyproject.toml
user-service/src/: main.py
user-service/src/api/: deps.py
user-service/src/api/v1/: auth.py  users.py
user-service/src/core/: config.py  security.py  tracing.py
user-service/src/db/: models.py  session.py
user-service/src/schemas/: token.py  user.py
user-service/src/services/: kafka_service.py  user_service.py
user-service/tests/: conftest.py  test_api.py
voting/: .gitignore  Dockerfile  pyproject.toml
voting/src/: main.py
voting/src/api/v1/: votes.py
voting/src/core/: config.py
voting/src/db/: models.py  session.py
voting/src/schemas/: vote.py
voting/src/services/: kafka_service.py  vote_service.py
voting/tests/: conftest.py  test_api.py
(+18 files in other folders)
