[project]
name = "expert-review-service"
version = "0.1.0"
description = "Expert Review Service for Panchayat"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "sqlalchemy[asyncio]>=2.0.29",
    "asyncpg>=0.29.0",
    "aiokafka>=0.10.0",
    "httpx>=0.28.1",
]
