[project]
name = "gov-submit-service"
version = "0.1.0"
description = "Gov Submit Service for Panchayat"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "aiokafka>=0.10.0",
    "httpx>=0.27.0",
]
