[project]
name = "threads"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiokafka>=0.13.0",
    "alt-profanity-check>=1.8.0",
    "asyncpg>=0.31.0",
    "elasticsearch[async]>=9.3.0",
    "fastapi>=0.135.3",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "redis>=7.4.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn>=0.44.0",
]
