[project]
name = "threads"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiokafka>=0.13.0",
    "alt-profanity-check>=1.8.0",
    "asyncpg>=0.31.0",
    "elasticsearch[async]>=8.11.0,<9.0.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "opentelemetry-exporter-otlp>=1.41.0",
    "opentelemetry-instrumentation-fastapi>=0.62b0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "redis>=7.4.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "testcontainers[kafka,postgres,redis]>=4.14.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
