[project]
name = "voting"
version = "0.1.0"
description = "Voting Service for DemoVox"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "redis>=5.0.3",
    "aiokafka>=0.10.0",
    "sqlalchemy[asyncio]>=2.0.29",
    "asyncpg>=0.29.0",
]
